# provcast

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  check.sh  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
api/: Cargo.toml  tauri.conf.json
api/capabilities/: default.json
api/icons/: icon.icns
api/src/: commands.rs  lib.rs  main.rs
api/src/audio/: README.md  decoder.rs  editor.rs  exporter.rs  mod.rs  playback.rs  processor.rs
api/src/metadata/: id3.rs
app/: index.css
app/components/: AudioControls.tsx  WaveformEditor.tsx  album-art-editor.tsx  audio-controls.tsx  export-dialog.tsx  metadata-editor.tsx  processing-panel.tsx  toolbar.tsx  waveform-editor.tsx
app/components/steps/: ExportStep.tsx  FileSelectStep.tsx  MetadataStep.tsx  NormalizationStep.tsx  TrimmingStep.tsx  export-step.tsx  file-select-step.tsx  metadata-step.tsx  normalization-step.tsx  trimming-step.tsx
app/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  separator.tsx  slider.tsx  tabs.tsx  tooltip.tsx
app/components/utils/: formatTime.ts
app/components/wizard/: StepSidebar.tsx  WizardLayout.tsx  step-sidebar.tsx  (+1 more)
app/hooks/: use-keyboard-shortcuts.ts  use-tauri-audio.ts  useKeyboardShortcuts.ts
app/routes/: __root.tsx  index.tsx
app/stores/: README.md  audio-store.ts  ui-store.ts  useUIStore.ts
docs/plans/: 2026-03-02-wizard-implementation.md  2026-03-02-wizard-refactor-design.md
(+30 files in other folders)
