[package]
name = "provcast"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
rodio = "0.20"
cpal = "0.15"
rubato = "0.16"
mp3lame-encoder = "0.2"
id3 = "1"
nnnoiseless = "0.5"
dasp = "0.11"
dasp_sample = "0.11"
parking_lot = "0.12"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[[bin]]
name = "Provcast"
path = "src/main.rs"

[lib]
name = "provcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
